# guix-curiass

./: .dir-locals.el  .gitignore  .guix-authorizations  .guix-channel  Makefile.am  NEWS  README  TODO  TODO.org  aclocal.m4  configure.ac  guix.scm  history.txt  runweb.sh
build-aux/: git-version-gen  gitlog-to-changelog  guix-env  guix.scm  pre-inst-env.in  test-driver.scm
build-aux/guix/: cuirass-package.scm
doc/: cuirass.texi
etc/: cuirass-registry.service  cuirass-remote-server.service  cuirass-remote-worker-v2.service  cuirass-remote-worker-v3.service  cuirass-remote-worker.service  cuirass-remote-worker.service.in  cuirass-web.service  new-client-cert.scm  nginx-default
examples/: cuirass.scm  gnu-system.scm  guix-jobs.scm  guix-track-git.scm  hello-git.scm  hello-singleton.scm  hello-subset.scm  hello.scm  random-jobs.scm  random-manifest.scm  random.scm
guix/: ci.scm
src/: cuirass.scm  schema.sql
src/cuirass/: base.scm  config.scm.in  database.scm  http.scm  job.scm  logging.scm  mail.scm  mastodon.scm  metrics.scm  notification.scm  parameters.scm  remote-server.scm  remote-worker.scm  remote.scm  repo.scm  rss.scm  send-events.scm  specification.scm  store.scm  templates.scm  ui.scm  utils.scm  watchdog.scm  zabbix.scm
src/cuirass/scripts/: evaluate.scm  register.scm  remote-server.scm  remote-worker.scm  web.scm
src/sql/: upgrade-1.sql  upgrade-10.sql  upgrade-11.sql  upgrade-12.sql  upgrade-13.sql  upgrade-14.sql  upgrade-15.sql  upgrade-16.sql  upgrade-17.sql  upgrade-18.sql  upgrade-19.sql  upgrade-2.sql  upgrade-3.sql  upgrade-4.sql  upgrade-5.sql  upgrade-6.sql  upgrade-7.sql  upgrade-8.sql  upgrade-9.sql
src/static/css/: cuirass.css
src/static/js/: build-log.js  cuirass.js
src/web/server/: fiberized.scm
tests/: base.scm  basic.sh  common.scm  database.scm  gnu-system.scm  guix-jobs.scm  guix-track-git.scm  hello-git.scm  hello-singleton.scm  hello-subset.scm  http.scm  mail.sh  metrics.scm  remote.scm  repo.scm  signing-key.pub  signing-key.sec  store.scm  ui.scm  utils.scm
